objects/ASI_CRM_Promotion_Detail_Achievement__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Achievement_Date__c</fullName>
        <label>Achievement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Achievement_Month__c</fullName>
        <formula>MONTH( ASI_CRM_Achievement_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Achievement Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Achievement_Year__c</fullName>
        <formula>YEAR( ASI_CRM_Achievement_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Achievement Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_ActualConsumptionEntitled_9L__c</fullName>
        <formula>ASI_CRM_ActualConsumption_9L__c - MOD(ASI_CRM_ActualConsumption_9L__c ,ASI_CRM_Promotion_Detail__r.ASI_CRM_Monthly_Avg_Target_Volume_9L__c) 
/*
ASI_CRM_Total_Months_Achieved__c * ASI_CRM_Promotion_Detail__r.ASI_CRM_Monthly_Avg_Target_Volume_9L__c
*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Consumption Entitled (9L)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_ActualConsumption_9L__c</fullName>
        <label>Actual Consumption (9L)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actual_Consumption_Value__c</fullName>
        <label>Actual Consumption Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actual_Incentive_Value_Cash__c</fullName>
        <formula>ASI_CRM_Incentive_Value_per_9L_Cash__c * ASI_CRM_IssuedConsumption_9L__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Incentive Value (Cash)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actual_Incentive_Value_FOC__c</fullName>
        <formula>ASI_CRM_Incentive_Value_per_9L_FOC__c * ASI_CRM_IssuedConsumption_9L__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Incentive Value (FOC)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actual_Incentive_Value_OIK__c</fullName>
        <formula>ASI_CRM_Incentive_Value_per_9L_OIK__c * ASI_CRM_IssuedConsumption_9L__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Incentive Value (Other in Kind)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actual_Incentive_Value_Voucher__c</fullName>
        <formula>ASI_CRM_Incentive_Value_per_9L_Voucher__c * ASI_CRM_IssuedConsumption_9L__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Incentive Value (Voucher)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actual_Incentive_Value__c</fullName>
        <formula>ASI_CRM_Incentive_Value_per_9L__c * ASI_CRM_IssuedConsumption_9L__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Incentive Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actual_Incentive_Volume_9L__c</fullName>
        <formula>ASI_CRM_Incentive_Volume_per_Unit__c * ASI_CRM_IssuedConsumption_9L__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Incentive Volume (9L)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Carry_Over_Additional_Bottle__c</fullName>
        <label>Carry Over (Additional Bottle)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Carry_Over_Promotional_Bottle__c</fullName>
        <label>Carry Over (Promotional Bottle)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_Value_per_9L_Cash__c</fullName>
        <label>Incentive Value per 9L (Cash)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_Value_per_9L_FOC__c</fullName>
        <label>Incentive Value per 9L (FOC)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_Value_per_9L_OIK__c</fullName>
        <label>Incentive Value per 9L (Other in Kind)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_Value_per_9L_Voucher__c</fullName>
        <label>Incentive Value per 9L (Voucher)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_Value_per_9L__c</fullName>
        <label>Incentive Value per 9L</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_Volume_per_Unit__c</fullName>
        <label>Incentive Volume per Unit</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_IssuedConsumption_9L__c</fullName>
        <label>Issued Consumption (9L)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion_Detail__c</fullName>
        <label>Promotion Detail</label>
        <referenceTo>ASI_HK_CRM_Promotion_Detail__c</referenceTo>
        <relationshipLabel>Promotion Detail Achievements</relationshipLabel>
        <relationshipName>Promotion_Detail_Achievements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Tota_Buy_Entitled_9L__c</fullName>
        <formula>/*
ASI_CRM_ActualConsumptionEntitled_9L__c - MOD(ASI_CRM_ActualConsumptionEntitled_9L__c,  ASI_CRM_Promotion_Detail__r.ASI_CRM_Promotion_Mechanic__r.ASI_CRM_Buy_9L__c)
*/
ASI_CRM_Promotion_Detail__r.ASI_CRM_Promotion_Mechanic__r.ASI_CRM_Buy_9L__c * ASI_CRM_Total_Buy_Entitled__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Buy Entitled (9L)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Buy_Entitled__c</fullName>
        <formula>FLOOR( ASI_CRM_ActualConsumptionEntitled_9L__c / ASI_CRM_Promotion_Detail__r.ASI_CRM_Promotion_Mechanic__r.ASI_CRM_Buy_9L__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Buy Entitled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Months_Achieved__c</fullName>
        <formula>FLOOR( ASI_CRM_ActualConsumption_9L__c / ASI_CRM_Promotion_Detail__r.ASI_CRM_Monthly_Avg_Target_Volume_9L__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Months Achieved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Promotion Detail Achievement</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Promotion Detail Achievement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Detail Achievements</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_SG_Promotion_Detail_Achievement</fullName>
        <active>true</active>
        <label>SG Promotion Detail Achievement</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>